SW-9963 - fixed fancy select styling on IE9

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/fields.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_components/fields.less
@@ -130,7 +130,6 @@ label.has--error {
 
     .js--fancy-select-text {
         .unitize-padding(0, 40, 0, 10);
-        width: 100%;
 
         // CSS truncating
         white-space: nowrap;
